<resources>
    <string name="app_name">GenGo</string>
    <string name="hint_input_account">account</string>
    <string name="hint_input_password">password</string>
    <string name="login_button">Login</string>
    <string name="clear_button">Clear</string>
    <string name="signup_link">Don\'t have an account? Sign Up</string>
    <string name="hint_firstname_signin_form">first name</string>
    <string name="hint_lastname_signin_form">last name</string>
    <string name="hint_account_signin_form">Account</string>
    <string name="hint_password_signin_form">password</string>
    <string name="hint_confirm_password_signin_form">confirm password</string>
    <string name="sign_in_button_form">Sign In</string>
    <string name="login_signin_form">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_storage">Storage</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_transaction">Transaction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="point_max">/5</string>
</resources>
