<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gengroup.huy.gengo.View.SigninView.SigninActivity">

    <LinearLayout
        android:layout_marginLeft="@dimen/margin_login_form"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.gengroup.huy.gengo.Component.RoundedPlainTextComponent
                android:background="@drawable/border_rounded_plaintext"
                android:padding="10dp"
                android:id="@+id/edtFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_firstname_signin_form"
                />

            <com.gengroup.huy.gengo.Component.RoundedPlainTextComponent
                android:background="@drawable/border_rounded_plaintext"
                android:padding="10dp"
                android:id="@+id/edtLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_lastname_signin_form"
                android:inputType="textPersonName"
                />
        </LinearLayout>

        <com.gengroup.huy.gengo.Component.RoundedPlainTextComponent
            android:layout_marginTop="10dp"
            android:background="@drawable/border_rounded_plaintext"
            android:padding="10dp"
            android:id="@+id/edtAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_account_signin_form"
            android:inputType="textPersonName"
            />

        <com.gengroup.huy.gengo.Component.RoundedPlainTextComponent
            android:layout_marginTop="10dp"
            android:background="@drawable/border_rounded_plaintext"
            android:padding="10dp"
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password_signin_form"
            android:inputType="textPassword"
            />

        <com.gengroup.huy.gengo.Component.RoundedPlainTextComponent
            android:layout_marginTop="10dp"
            android:background="@drawable/border_rounded_plaintext"
            android:padding="10dp"
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_confirm_password_signin_form"
            android:inputType="textPassword"
            />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.gengroup.huy.gengo.Component.RoundedButtonComponent
                android:id="@+id/btnSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_button_rounded"
                android:text="@string/sign_in_button_form"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <com.gengroup.huy.gengo.Component.RoundedButtonComponent
                android:id="@+id/btnBackLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_button_rounded"
                android:text="@string/login_signin_form"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
