<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gengroup.huy.gengo.View.LoginView.LoginActivity">

    <LinearLayout
        android:layout_marginRight="@dimen/margin_login_form"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <com.gengroup.huy.gengo.Component.RoundedPlainTextComponent
            android:padding="@dimen/padding_input"
            android:background="@drawable/border_rounded_plaintext"
            android:layout_marginBottom="@dimen/margin_bottom_input"
            android:id="@+id/edtAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_input_account"
            android:inputType="textPersonName"
             />

        <com.gengroup.huy.gengo.Component.RoundedPlainTextComponent
            android:padding="@dimen/padding_input"
            android:background="@drawable/border_rounded_plaintext"
            android:layout_marginBottom="@dimen/margin_bottom_input"
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_input_password"
            android:inputType="textPassword"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.gengroup.huy.gengo.Component.RoundedButtonComponent
                android:background="@drawable/background_button_disabled_rounded"
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:enabled="false"
                android:text="@string/login_button" />

            <com.gengroup.huy.gengo.Component.RoundedButtonComponent
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="@drawable/background_button_rounded"
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvLinkToSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/signup_link"
            android:textColor="#001a9b" />
    </LinearLayout>
</RelativeLayout>
